<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/profilePicturesList">

    <RelativeLayout>
        <TextView
            android:id="@+id/profilePictureVotes"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/profilePictureListText"
            android:textColor="@color/colorPrimary"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/profilePictureThumbnail"
            android:layout_toStartOf="@+id/deletePictureButton"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="19dp"/>

        <ImageView
            android:id="@+id/profilePictureThumbnail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/contentDescriptionPictureThumbnailImage"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_deleting_picture"
            android:src="@drawable/ic_clear_black_32dp"
            android:id="@+id/deletePictureButton"
            android:layout_marginEnd="12dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/delete_picture_button"/>
    </RelativeLayout>

</TableRow>